Mobile: no carousel + search fixed in navbar collapsed + modals replaced with new tabs + footer logo link to home + special product photo 100% width + calendar-limit nr of characters of events from calendar

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -1226,7 +1226,7 @@ hr{
     margin-top: -19px;
   }
   @media(max-width: 768px){
-    margin-right: 52% !important;
+    margin-right: 48% !important;
     margin-top: -19px;
     right: 0;
   }
@@ -1607,4 +1607,14 @@ h4{
 }
 .margin65pxRight{
   margin-right: 65px;
+}
+.noXOver{
+  overflow-x: hidden;
+  overflow-y: hidden !important;
+  max-height: 375px!important;
+}
+@media(max-device-width: 600px){
+  .specialProdImage{
+    width: 100%;
+  }
 }
